--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js">
     </script>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/util/tracking-min.js"></script>
+    <script src="./js/util/tracking.js"></script>
     <script src="./js/util/face-min.js"></script>
     <script src="./js/util/eye-min.js"></script>
     <script src="./js/util/mouth-min.js"></script>
@@ -18,14 +18,22 @@
 
     <div id="main" class="container">
       <div id="left">
-        <p>The Nevada National Security Site[1] (NNSS), previously the Nevada Test Site (NTS), is a United States Department of Energy reservation located in southeastern Nye County, Nevada, about 65 miles (105 km) northwest of the city of Las Vegas. Formerly known as the Nevada Proving Grounds,[2] the site was established on 11 January 1951 for the testing of nuclear devices, covering approximately 1,360 square miles (3,500 km2) of desert and mountainous terrain.
-        </p>
+        <div id="map"></div>
+        <div class="content">
+          <p>
+            The Nevada National Security Site[1] (NNSS), previously the Nevada Test Site (NTS), is a United States Department of Energy reservation located in southeastern Nye County, Nevada, about 65 miles (105 km) northwest of the city of Las Vegas. Formerly known as the Nevada Proving Grounds,[2] the site was established on 11 January 1951 for the testing of nuclear devices, covering approximately 1,360 square miles (3,500 km2) of desert and mountainous terrain.
+          </p>
+        </div>
+ 
+
         <div class="fc">
             <img id='faces' src="" alt="">
         </div>
       
       </div>
-      <div id="right"><div id="map"></div></div>
+      <div id="right">
+        <div id="map-moveable"></div>
+      </div>
       
       <script>
 
