--- a/front-end/index.html
+++ b/front-end/index.html
@@ -19,7 +19,7 @@
         <div id="map"></div>
         <div class="content">
           <p>
-            The Nevada National Security Site[1] (NNSS), previously the Nevada Test Site (NTS), is a United States Department of Energy reservation located in southeastern Nye County, Nevada, about 65 miles (105 km) northwest of the city of Las Vegas. Formerly known as the Nevada Proving Grounds,[2] the site was established on 11 January 1951 for the testing of nuclear devices, covering approximately 1,360 square miles (3,500 km2) of desert and mountainous terrain.
+            The Nevada National Security Site (NNSS), previously the Nevada Test Site (NTS), is a United States Department of Energy reservation located in southeastern Nye County, Nevada, about 65 miles (105 km) northwest of the city of Las Vegas. Formerly known as the Nevada Proving Grounds,[2] the site was established on 11 January 1951 for the testing of nuclear devices, covering approximately 1,360 square miles (3,500 km2) of desert and mountainous terrain.
           </p>
         </div>
  
